--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "2d Spline Curve Editor",
-  "version": "0.1",
+  "name": "SplineEditorDemo",
+  "version": "0.0.2",
   "description": "Example curve editor using functional JS",
   "main": "index.js",
   "dependencies": {
     "baconjs": "^0.7.84",
-    "ramda": "^0.20.1",
-    "requirejs": "^2.2.0"
+    "ramda": "^0.20.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "webpack": "^1.13.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
