--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "webpack": "^1.13.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "./node_modules/.bin/webpack --progress"
   },
   "repository": {
     "type": "git",
