--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "webpack-build": "^1.0.1"
   },
+  "bin" : { "build" : "index.js"},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "./node_modules/.bin/webpack --progress"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
